# soda

./: .gitignore  TODO  init_env.sh  readme.md
conf/: .gitignore  soda.conf.sample
docker/: build-utils.sh
framework/common/: 2phase-build.sh  bashlib.sh  build-image.sh  build-utils.sh  jvm-like.sh  make-image.sh  vars.sh
framework/cpp/: .gitignore  CMakeLists.txt  Dockerfile  build-docker.sh  do-make.sh  gen-makefile.sh  make.sh  work.sh
framework/cpp/src/soda/leetcode/: Makefile  leetcode.h  nest.cpp  nest.h
framework/cpp/src/soda/unittest/: Makefile  bootstrap.cpp  convert.cpp  convert.h  feature.h  feature_factory.h  json_access.cpp  jsonproxy.cpp  jsonproxy.h  special_convert.h  struct.h  unittest.h  unordered.h  util.cpp  util.h  validate.h  work.h  workdata.cpp  workdata.h
framework/cpp/src/soda/unittest/jsonlib/: nmjson.cpp  nmjson.h
framework/csharp/: .gitignore  Dockerfile  _setup_env.sh  build-docker.sh  common.sh  deploy.sh  make-lib.sh  soda-csharp.sln  work.sh
framework/go/: _setup_env.sh  bootstrap.go  build-docker.sh  work.sh
framework/groovy/: .gitignore  Dockerfile  _setup_env.sh  build-docker.sh  build.gradle  deploy.sh  make.sh  server.sh  settings.gradle  work.sh
framework/java/: .gitignore  Dockerfile  Dockerfile-template  _setup_env.sh  build-docker.sh  deploy.sh  make.sh  pom.xml  server.sh  work.sh
framework/js/: Dockerfile  build-docker.sh  package-lock.json  package.json  work.sh
framework/kotlin/: .gitignore  Dockerfile  _setup_env.sh  build-docker.sh  build.gradle.kts  deploy.sh  make.sh  (+3 more)
test-case/: run-test.sh
(+1240 files in other folders)
